--- a/mirror.toml
+++ b/mirror.toml
@@ -1,64 +1,69 @@
 [[repositories]]
-  url = "git@github.com:mirrorboards/mirrorboards-vscode.git"
-  path = "."
-  name = ".vscode"
+name = ".vscode"
+path = "."
+url = "git@github.com:mirrorboards/mirrorboards-vscode.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards/mirrorboards-ts.git"
-  path = "mirrorboards"
-  name = "mirrorboards"
+name = "mirrorboards"
+path = "mirrorboards"
+url = "git@github.com:mirrorboards/mirrorboards-ts.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards/mirrorboards-go.git"
-  path = "mirrorboards"
-  name = "mirrorboards-go"
+name = "mirrorboards-go"
+path = "mirrorboards"
+url = "git@github.com:mirrorboards/mirrorboards-go.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards/platform.git"
-  path = "mirrorboards-platform"
-  name = "platform"
+name = "mirrorboards-platform"
+path = "."
+url = "git@github.com:mirrorboards/platform.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards/mirrorboards-fish-functions.git"
-  path = "mirrorboards-utils"
-  name = "mirrorboards-fish-functions"
+name = "mirrorboards-fish-functions"
+path = "mirrorboards-utils"
+url = "git@github.com:mirrorboards/mirrorboards-fish-functions.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards/mirrorboards-install.git"
-  path = "mirrorboards-utils"
-  name = "mirrorboards-install"
+name = "mirrorboards-install"
+path = "mirrorboards-utils"
+url = "git@github.com:mirrorboards/mirrorboards-install.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards/pay2vault-platform.git"
-  path = "."
-  name = "pay2vault-platform"
+name = "pay2vault-platform"
+path = "."
+url = "git@github.com:mirrorboards/pay2vault-platform.git"
 
 [[repositories]]
-  url = "git@github.com:pay2vault/pay2vault-mobile.git"
-  path = "pay2vault"
-  name = "pay2vault-mobile"
+name = "pay2vault-mobile"
+path = "pay2vault"
+url = "git@github.com:pay2vault/pay2vault-mobile.git"
 
 [[repositories]]
-  url = "git@github.com:pay2vault/pay2vault-web.git"
-  path = "pay2vault"
-  name = "pay2vault-web"
+name = "pay2vault-web"
+path = "pay2vault"
+url = "git@github.com:pay2vault/pay2vault-web.git"
 
 [[repositories]]
-  url = "git@github.com:pay2vault/pay2vault-api.git"
-  path = "pay2vault"
-  name = "pay2vault-api"
+name = "pay2vault-api"
+path = "pay2vault"
+url = "git@github.com:pay2vault/pay2vault-api.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards-exchange/mirrorboards-exchange-operations.git"
-  path = "exchange"
-  name = "exchange-operations"
+name = "exchange-operations"
+path = "exchange"
+url = "git@github.com:mirrorboards-exchange/mirrorboards-exchange-operations.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards-exchange/mirrorboards-exchange-platform.git"
-  path = "."
-  name = "exchange-platform"
+name = "exchange-platform"
+path = "."
+url = "git@github.com:mirrorboards-exchange/mirrorboards-exchange-platform.git"
 
 [[repositories]]
-  url = "git@github.com:mirrorboards/mirrorboards.git"
-  path = "mirrorboards"
-  name = "mirrorboards"
+name = "mirrorboards"
+path = "mirrorboards"
+url = "git@github.com:mirrorboards/mirrorboards.git"
+
+[[repositories]]
+name = "mirrorboards-mctl"
+path = "mirrorboards-utils"
+url = "git@github.com:mirrorboards/mirrorboards-mctl.git"
